--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Taskset</string>
+    <string name="add_task">Add Task.</string>
+    <string name="enter_title">Enter the title</string>
+    <string name="enter_description">Enter the description</string>
+    <string name="enter_category">Enter category</string>
+    <string name="save_button_description">Save Button</string>
+    <string name="tasks_heading">Tasks.</string>
+    <string name="add_button_description">Add Button</string>
+    <string name="title_label">Title</string>
+    <string name="content_label">Content</string>
+    <string name="update_button_description">Update Button</string>
+    <string name="delete_button_description">Delete Button</string>
+
 </resources>
